# MCPServer

./: .gitignore  MCPserver.py  pyproject.toml  requirements.txt
