[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.15.0",
    "pydantic>=2.11.9",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
